<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/vert1"
    android:fillViewport="true" 
    
    >

    <LinearLayout
        android:id="@+id/LinearLayout_patientDetail"
        android:orientation="vertical"
      
           android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/vert1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
         >

            <ImageView
                android:id="@+id/imageView1"
                android:contentDescription="@string/photo_of_the_patient"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/marc_zuckerberg" />

            <TextView
                android:id="@+id/textView1"
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView1"
                android:layout_toEndOf="@+id/imageView1"
                android:text="@string/first_nname_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:layout_below="@+id/textView1"
                android:layout_toRightOf="@+id/imageView1"
                android:layout_toEndOf="@+id/imageView1"
                android:text="@string/last_nname_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="23dp"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:background="@drawable/border"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="23dp"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/textView1"
                android:layout_toRightOf="@+id/textView1"
                android:background="@drawable/border"
                android:paddingBottom="5dp"
                android:text="@string/textview" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"  >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:text="@string/sex_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:text="@string/age_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="10dp" 
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/text"
                android:layout_gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="4"
             >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:text="@string/weigth_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:layout_width="60dp"
                android:background="@drawable/border"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:text="@string/heigth_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="10dp"  />
            
            <TextView
                android:id="@+id/textView22"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/textView23"
                android:layout_weight="1"
                android:layout_width="60dp"
               
                android:layout_height="23dp"
                android:text="@string/blood_group_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold"
                
                
                />

            <TextView
                android:id="@+id/textView24"
                android:layout_weight="0.15"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:background="@drawable/border"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_separator"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            
           
            >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="110dp"
                android:layout_height="23dp"
                android:text="@string/telephone_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_weight="0.8"
                 />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="149dp"
                android:layout_height="23dp"
                android:background="@drawable/border"
                android:text="@string/small_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" 
                android:layout_weight="1.2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
            android:weightSum="2" 
             >

            <TextView
                android:id="@+id/textView9"
               android:layout_width="110dp"
                android:layout_height="23dp"
                android:text="@string/adress_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" 
                android:layout_weight="0.8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="149dp"
                android:layout_height="23dp"
                android:layout_weight="1.2"
                android:background="@drawable/border"
                android:text="@string/small_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp"
             >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="110dp"
                android:layout_height="23dp"
                android:text="@string/city_"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:layout_weight="0.8"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="149dp"
                android:layout_height="23dp"
                android:background="@drawable/border"
                android:text="@string/small_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray" 
                android:layout_weight="1.2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp"
             >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="110dp"
                android:layout_height="23dp"
                android:text="@string/mail_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" 
                android:layout_weight="0.8"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="149dp"
                android:layout_height="23dp"
                android:background="@drawable/border"
                android:text="@string/small_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray"
                android:layout_weight="1.2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="110dp"
                android:layout_height="23dp"
                android:text="@string/postal_code_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" 
                android:layout_weight="0.8" 
                />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="149dp"
                android:layout_height="23dp"
                android:background="@drawable/border"
                android:text="@string/small_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gray"
                android:layout_weight="1.2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_separator"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
        </LinearLayout>

    </LinearLayout>

</ScrollView>