
    <ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vert1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fragments.NewTreatement_activity" 
    android:id="@+id/scrollView1"
        
        
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:id="@+id/LinearLayout0">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/drugs"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="11dp"
                    android:baselineAligned="false"
                    android:weightSum="1"
                    android:id="@+id/linearLayout2"
                     >

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView1"
                        android:layout_weight="0.7"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:background="@drawable/rondedtextview"
                        android:hint="@string/enteradrug"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:popupBackground="@color/black"
                        android:dropDownSelector="@color/gray"
                         />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="25dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.3"
                        android:ems="10"
                        android:layout_gravity="end"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:inputType="number"
                        android:textStyle="bold"
                        android:background="@drawable/rondedtextview"
                        android:hint="@string/quantity"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/add"
                    android:textSize="17sp"
                    android:textStyle="bold" 
                    android:layout_marginTop="15dp"
                    />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="11dp"
                    android:popupBackground="@color/white"
                    android:background="@drawable/rondedtextview"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp" >

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/line_separator"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/prescription"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                     />
               
                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rondedtextview"
                    android:ems="10"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    android:scrollbars="none"
                    android:textSize="14sp" >

                    <requestFocus />
                    
                </EditText>
           
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:id="@+id/linearLayout6"
                    android:layout_height="2dp"
                    android:background="@drawable/line_separator"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/report"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EditText01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rondedtextview"
                    android:ems="10"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    android:scrollbars="none"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginStart="60dp"
                        android:text="@string/ok"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
