<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vert1"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context="control.Home_activity" >

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/textview"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/textView1_HomePage"
                android:textColor="@color/white"
                android:textSize="@dimen/moi" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_weight="0.13"
        android:gravity="top"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="0.77"
                android:ems="10"
                android:hint="@string/patient_id"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="46dp"
                android:layout_height="39dp"
                android:background="@drawable/button_green_benji_park_01"
                android:text="new" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="bottom|center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/dp30" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_weight="0.08"
        android:gravity="bottom|top" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="46dp"
            android:layout_height="38dp"
            android:layout_weight="0.03"
            android:background="@drawable/button_green_benji_park_01"
            android:text="Search" />

    </LinearLayout>

</LinearLayout>